--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,61 @@
   <!-- Shared version number properties -->
 <properties>
     <org.springframework.version>4.1.1.RELEASE</org.springframework.version>
+    <apache.tiles>3.0.5</apache.tiles>
 </properties>
   
   <dependencies>
+
+  <dependency>
+  	<groupId>org.hsqldb</groupId>
+  	<artifactId>hsqldb</artifactId>
+  	<version>2.3.2</version>
+  </dependency>
+
+  <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>1.7.0.RELEASE</version>
+    </dependency>
+  
+  <dependency>
+  	<groupId>org.hibernate</groupId>
+  	<artifactId>hibernate-entitymanager</artifactId>
+  	<version>4.3.6.Final</version>
+  </dependency>
+
+  <dependency>
+  	<groupId>javax.servlet</groupId>
+  	<artifactId>javax.servlet-api</artifactId>
+  	<version>3.1.0</version>
+  	<scope>provided</scope>
+  </dependency>
+  
+   <dependency>
+  	<groupId>javax.servlet.jsp</groupId>
+  	<artifactId>javax.servlet.jsp-api</artifactId>
+  	<version>2.2.1</version>
+  	<scope>provided</scope>
+  </dependency>
+
+  <dependency>
+  	<groupId>org.apache.tiles</groupId>
+  	<artifactId>tiles-core</artifactId>
+  	<version>${apache.tiles}</version>
+  </dependency>
+  
+   <dependency>
+  	<groupId>org.apache.tiles</groupId>
+  	<artifactId>tiles-jsp</artifactId>
+  	<version>${apache.tiles}</version>
+  </dependency>
+  
+  <dependency>
+  	<groupId>org.slf4j</groupId>
+  	<artifactId>slf4j-log4j12</artifactId>
+  	<version>1.7.7</version>
+  </dependency>
+
   <!--
     Core utilities used by other modules.
     Define this if you use Spring Utility APIs (org.springframework.core.*/org.springframework.util.*)
@@ -162,7 +214,10 @@
   		<plugin>
   			<groupId>org.eclipse.jetty</groupId>
   			<artifactId>jetty-maven-plugin</artifactId>
-  			<version>9.2.3.v20140905</version>
+  			<version>9.3.0.M0</version>
+  			<configuration>
+  			<scanIntervalSeconds>120</scanIntervalSeconds>
+  			</configuration>
   		</plugin>
   		
   		<plugin>
@@ -174,6 +229,7 @@
   			<target>1.8</target>
   			</configuration>
   		</plugin>
+  		
   	</plugins>
   </build>
   
