--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 </properties>
   
   <dependencies>
+  
+  <dependency>
+  	<groupId>jstl</groupId>
+  	<artifactId>jstl</artifactId>
+  	<version>1.2</version>
+  </dependency>
 
   <dependency>
   	<groupId>org.hsqldb</groupId>
