--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,17 @@
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   
-  <filter>
+ 	<filter>
+ 		 <filter-name>springSecurityFilterChain</filter-name>
+  		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+  		<filter-name>springSecurityFilterChain</filter-name>
+ 		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+  
+ <!--  <filter>
   <filter-name>oemInViewFilter</filter-name>
   <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
   <init-param>
@@ -40,5 +50,6 @@
   <filter-mapping>
   <filter-name>oemInViewFilter</filter-name>
   <url-pattern>/*</url-pattern>
-  </filter-mapping>
+  </filter-mapping> -->
+  
 </web-app>
